jpg to JPG in index

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
     <div class="gallery">
         <h2>Мои работы</h2>
         <img src="work1.jpg" alt="Работа 1">
-        <img src="work2.jpg" alt="Работа 2">
-        <img src="work3.jpg" alt="Работа 3">
+        <img src="work2.JPG" alt="Работа 2">
+        <img src="work3.JPG" alt="Работа 3">
         <img src="work4.jpg" alt="Работа 4">
     </div>
 
