--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Профессиональный визажист Томирис Рабимзатова. Макияж для любых мероприятий.">
+    <meta name="keywords" content="визажист, макияж, Томирис Рабимзатова, свадебный макияж, вечерний макияж, профессиональный визажист">
+    <meta property="og:title" content="Визажист Томирис Рабимзатова">
+    <meta property="og:description" content="Профессиональный визажист Томирис Рабимзатова. Макияж для любых мероприятий.">
+    <meta property="og:image" content="URL_вашего_изображения">
+    <meta property="og:url" content="URL_вашего_сайта">
+    <meta name="twitter:card" content="summary_large_image">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"></noscript>
     <title>Визажист Томирис Рабимзатова</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
             background-color: #f9f9f9;
@@ -62,6 +73,11 @@
         }
     </style>
 </head>
+<body>
+    <!-- Ваше содержимое -->
+</body>
+</html>
+
 <body>
 
 <header>
