--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
         .section:nth-child(odd) {
             background-color: #f2f2f2;
         }
+     
+        .gallery {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        gap: 10px;
+        }
+        
         .gallery img {
             max-width: 100%;
             height: auto;
