--- a/index.html
+++ b/index.html
@@ -1,138 +1,235 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Профессиональный визажист Томирис Рабимзатова. Макияж для любых мероприятий.">
-    <meta name="keywords" content="визажист, макияж, Томирис Рабимзатова, свадебный макияж, вечерний макияж, профессиональный визажист">
-    <meta property="og:title" content="Визажист Томирис Рабимзатова">
-    <meta property="og:description" content="Профессиональный визажист Томирис Рабимзатова. Макияж для любых мероприятий.">
-    <meta property="og:image" content="https://tomiart.kz/work1.jpg">
-    <meta property="og:url" content="https://tomiart.kz/">
-    <meta name="twitter:card" content="summary_large_image">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"></noscript>
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-    <title>Визажист Томирис Рабимзатова</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>История графического дизайна</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-        }
-        header {
-            background-color: #ff6f61;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        .section {
-            padding: 60px 20px;
-            text-align: center;
-        }
-        .section:nth-child(even) {
-            background-color: #fff;
-        }
-        .section:nth-child(odd) {
-            background-color: #f2f2f2;
-        }
-     
-        .gallery {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-        gap: 10px;
-        }
-        
-        .gallery img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
-        }
-        .gallery img:hover {
-            transform: scale(1.05);
-        }
-        .social-links {
-            display: flex;
-            justify-content: center;
-            gap: 15px;
-            margin-top: 20px;
-        }
-        .social-links a {
-            display: inline-block;
-            width: 40px;
-            height: 40px;
-            background-color: #ff6f61;
-            color: white;
-            text-align: center;
-            line-height: 40px;
-            border-radius: 50%;
-            transition: background-color 0.3s ease;
-        }
-        .social-links a:hover {
-            background-color: #e55b51;
-        }
-        .social-links a i {
-            font-size: 20px;
-        }
-        .button {
-            display: inline-block;
-            padding: 10px 20px;
-            margin: 20px 0;
-            background-color: #ff6f61;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
-        }
-        .button:hover {
-            background-color: #e55b51;
-        }
-        .fade-in {
-            opacity: 0;
-            animation: fadeIn 1s forwards;
-        }
-        @keyframes fadeIn {
+        @keyframes fade-in-up {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+
             to {
                 opacity: 1;
+                transform: translateY(0);
             }
+        }
+
+        .animate-fade-in-up {
+            animation: fade-in-up 0.8s ease-out forwards;
+        }
+
+        .timeline::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 4px;
+            height: 100%;
+            background-color: hwb(220 58% 18%);
         }
     </style>
 </head>
-<body>
 
-<header>
-    <h1>Томирис Рабимзатова - Профессиональный Визажист</h1>
-</header>
+<body class="bg-gray-50 text-gray-900 font-sans">
+    <header class="bg-white shadow-md py-6 px-4 text-center">
+        <h1 class="text-3xl font-bold">История графического дизайна</h1>
+    </header>
 
-<div class="section about fade-in">
-    <h2>Обо мне</h2>
-    <p>Привет! Меня зовут Томирис Рабимзатова, я профессиональный визажист с более чем 3-летним опытом. Я специализируюсь на создании образов для свадеб, фотосессий и других особенных событий. Моя цель - подчеркнуть вашу естественную красоту и сделать вас уверенными в себе.</p>
-</div>
+    <main class="max-w-6xl mx-auto py-10 px-4 animate-fade-in-up">
+        <section class="text-center mb-10">
+            <h2 class="text-4xl font-bold mb-2">Таймлайн</h2>
+            <p class="text-gray-600 text-lg">Ключевые события и стили, повлиявшие на визуальную культуру</p>
+        </section>
 
-<div class="section gallery fade-in">
-    <h2>Мои работы</h2>
-    <img src="work1.jpg" alt="Работа 1">
-    <img src="work2.JPG" alt="Работа 2">
-    <img src="work3.JPG" alt="Работа 3">
-    <img src="work4.jpg" alt="Работа 4">
-</div>
+        <div class="relative">
+            <div class="timeline absolute left-1/2 top-0 bottom-0"></div>
 
-<div class="section contact fade-in">
-    <h2>Контактная информация</h2>
-    <p>Email: tomiris.kustova@mail.ru</p>
-    <p>Телефон: +7 (778) 378-59-89</p>
-    <div class="social-links">
-        <a href="https://www.instagram.com/totomik.mua" target="_blank"><i class="fab fa-instagram"></i></a>
-    </div>
-</div>
+            <!-- Пример события -->
+            <div class="mb-16 flex flex-col md:flex-row justify-between items-center w-full group relative">
+                <div
+                    class="md:w-5/12 p-6 bg-white rounded-xl shadow-md group-hover:-translate-y-2 transition-transform">
+                    <h3 class="text-xl font-semibold">Появление печатного станка (около 1440)</h3>
+                    <p class="mt-2 text-gray-700">Изобретение печатного станка стало основой для массового производства
+                        шрифтов и книгопечатания.</p>
+                    <details class="mt-3 text-sm text-gray-600 cursor-pointer">
+                        <summary class="font-medium text-blue-600">Подробнее</summary>
+                        <p class="mt-1">Иоганн Гутенберг в 1440 году изобрёл печатный станок, что революционизировало
+                            распространение информации и развитие графического дизайна.</p>
+                        <video class="mt-4 rounded-xl shadow-md" width="100%" controls>
+                            <source src="IMG_0488.MP4" type="video/mp4">
+                            Ваш браузер не поддерживает видео.
+                        </video>
+                    </details>
+                </div>
+            </div>
 
+            <!-- Следующие события вставляются аналогично, меняя описание -->
+
+            <!-- Пример события -->
+            <div class="mb-16 flex flex-col md:flex-row-reverse justify-between items-center w-full group relative">
+                <div
+                    class="md:w-5/12 p-6 bg-white rounded-xl shadow-md group-hover:-translate-y-2 transition-transform">
+                    <h3 class="text-xl font-semibold">Ренессанс и Возрождение (14–17 века)</h3>
+                    <p class="mt-2 text-gray-700">В эпоху Ренессанса дизайн начинает развиваться как искусство.</p>
+                    <details class="mt-3 text-sm text-gray-600 cursor-pointer">
+                        <summary class="font-medium text-blue-600">Подробнее</summary>
+                        <p class="mt-1">В этот период дизайн в первую очередь связан с изящными искусствами, и
+                            становится важной частью
+                            оформления книг и других произведений искусства. Появляются первые типографские шрифты, а
+                            искусство оформления страниц и книг значительно влияет на развитие графического дизайна.
+                            Ренессанс открыл путь к более осознанному и эстетически продуманному подходу к оформлению.
+                        </p>
+                        <img src="01davinchi.jpg" alt="описание" class="w-full rounded-lg mt-4 shadow" />
+                    </details>
+                </div>
+            </div>
+
+            <!-- Событие слева -->
+            <div class="mb-16 flex flex-col md:flex-row justify-between items-center w-full group relative">
+                <!-- Контент события -->
+                <div
+                    class="md:w-5/12 p-6 bg-white rounded-xl shadow-md group-hover:-translate-y-2 transition-transform">
+                    <h3 class="text-xl font-semibold">Баухаус (1919–1933)</h3>
+                    <p class="mt-2 text-gray-700">Баухаус оказал огромное влияние на модернистский дизайн.</p>
+                    <details class="mt-3 text-sm text-gray-600 cursor-pointer">
+                        <summary class="font-medium text-blue-600">Подробнее</summary>
+                        <p class="mt-1">Баухаус был учебным заведением в Германии, которое революционизировало подход к
+                            дизайну. Его
+                            основатели, такие как Вальтер Гропиус, считали, что дизайн должен быть функциональным,
+                            доступным
+                            и простым. Баухаус стремился объединить искусство и технологию, что позволило создать
+                            дизайн,
+                            соответствующий потребностям массового производства и индустриализации. Его принципы нашли
+                            отражение в современном графическом дизайне, архитектуре и промышленном дизайне.</p>
+                        <iframe src="bauhaus.pdf" class="w-full h-[500px] mt-4 rounded-lg shadow"></iframe>
+                    </details>
+                </div>
+            </div>
+
+            <!-- Событие справа -->
+            <div class="mb-16 flex flex-col md:flex-row-reverse justify-between items-center w-full group relative">
+                <!-- Контент события -->
+                <div
+                    class="md:w-5/12 p-6 bg-white rounded-xl shadow-md group-hover:-translate-y-2 transition-transform">
+                    <h3 class="text-xl font-semibold">ЗАГОЛОВОК</h3>
+                    <p class="mt-2 text-gray-700">КРАТКО</p>
+                    <details class="mt-3 text-sm text-gray-600 cursor-pointer">
+                        <summary class="font-medium text-blue-600">Подробнее</summary>
+                        <p class="mt-1">ПОДРОБНО</p>
+                    </details>
+                </div>
+            </div>
+
+            <!-- Событие слева -->
+            <div class="mb-16 flex flex-col md:flex-row justify-between items-center w-full group relative">
+                <!-- Контент события -->
+                <div
+                    class="md:w-5/12 p-6 bg-white rounded-xl shadow-md group-hover:-translate-y-2 transition-transform">
+                    <h3 class="text-xl font-semibold"></h3>
+                    <p class="mt-2 text-gray-700"></p>
+                    <details class="mt-3 text-sm text-gray-600 cursor-pointer">
+                        <summary class="font-medium text-blue-600">Подробнее</summary>
+                        <p class="mt-1"></p>
+                    </details>
+                </div>
+            </div>
+
+            <!-- Событие справа -->
+            <div class="mb-16 flex flex-col md:flex-row-reverse justify-between items-center w-full group relative">
+                <!-- Контент события -->
+                <div
+                    class="md:w-5/12 p-6 bg-white rounded-xl shadow-md group-hover:-translate-y-2 transition-transform">
+                    <h3 class="text-xl font-semibold"></h3>
+                    <p class="mt-2 text-gray-700"></p>
+                    <details class="mt-3 text-sm text-gray-600 cursor-pointer">
+                        <summary class="font-medium text-blue-600">Подробнее</summary>
+                        <p class="mt-1"></p>
+                    </details>
+                </div>
+            </div>
+
+            <!-- Событие слева -->
+            <div class="mb-16 flex flex-col md:flex-row justify-between items-center w-full group relative">
+                <!-- Контент события -->
+                <div
+                    class="md:w-5/12 p-6 bg-white rounded-xl shadow-md group-hover:-translate-y-2 transition-transform">
+                    <h3 class="text-xl font-semibold"></h3>
+                    <p class="mt-2 text-gray-700"></p>
+                    <details class="mt-3 text-sm text-gray-600 cursor-pointer">
+                        <summary class="font-medium text-blue-600">Подробнее</summary>
+                        <p class="mt-1"></p>
+                    </details>
+                </div>
+            </div>
+
+            <!-- Событие справа -->
+            <div class="mb-16 flex flex-col md:flex-row-reverse justify-between items-center w-full group relative">
+                <!-- Контент события -->
+                <div
+                    class="md:w-5/12 p-6 bg-white rounded-xl shadow-md group-hover:-translate-y-2 transition-transform">
+                    <h3 class="text-xl font-semibold"></h3>
+                    <p class="mt-2 text-gray-700"></p>
+                    <details class="mt-3 text-sm text-gray-600 cursor-pointer">
+                        <summary class="font-medium text-blue-600">Подробнее</summary>
+                        <p class="mt-1"></p>
+                    </details>
+                </div>
+            </div>
+
+            <!-- Событие слева -->
+            <div class="mb-16 flex flex-col md:flex-row justify-between items-center w-full group relative">
+                <!-- Контент события -->
+                <div
+                    class="md:w-5/12 p-6 bg-white rounded-xl shadow-md group-hover:-translate-y-2 transition-transform">
+                    <h3 class="text-xl font-semibold"></h3>
+                    <p class="mt-2 text-gray-700"></p>
+                    <details class="mt-3 text-sm text-gray-600 cursor-pointer">
+                        <summary class="font-medium text-blue-600">Подробнее</summary>
+                        <p class="mt-1"></p>
+                    </details>
+                </div>
+            </div>
+
+            <!-- Событие справа -->
+            <div class="mb-16 flex flex-col md:flex-row-reverse justify-between items-center w-full group relative">
+                <!-- Контент события -->
+                <div
+                    class="md:w-5/12 p-6 bg-white rounded-xl shadow-md group-hover:-translate-y-2 transition-transform">
+                    <h3 class="text-xl font-semibold"></h3>
+                    <p class="mt-2 text-gray-700"></p>
+                    <details class="mt-3 text-sm text-gray-600 cursor-pointer">
+                        <summary class="font-medium text-blue-600">Подробнее</summary>
+                        <p class="mt-1"></p>
+                    </details>
+                </div>
+            </div>
+
+            <!-- Событие слева -->
+            <div class="mb-16 flex flex-col md:flex-row justify-between items-center w-full group relative">
+                <!-- Контент события -->
+                <div
+                    class="md:w-5/12 p-6 bg-white rounded-xl shadow-md group-hover:-translate-y-2 transition-transform">
+                    <h3 class="text-xl font-semibold"></h3>
+                    <p class="mt-2 text-gray-700"></p>
+                    <details class="mt-3 text-sm text-gray-600 cursor-pointer">
+                        <summary class="font-medium text-blue-600">Подробнее</summary>
+                        <p class="mt-1"></p>
+                    </details>
+                </div>
+            </div>
+
+
+
+
+
+        </div>
+    </main>
 </body>
+
 </html>
