--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>История графического дизайна</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+        .header-background {
+            background-image: url('header.jpeg');
+            /* путь к изображению */
+            background-size: cover;
+            /* растягивает изображение */
+            background-position: bottom;
+            /* центрирует изображение */
+            background-repeat: no-repeat;
+        }
+
+        @media (min-width: 768px) {
+            .header-background {
+                height: 300px;
+                /* Увеличиваем на больших экранах */
+            }
+        }
+    </style>
+    <style>
         @keyframes fade-in-up {
             from {
                 opacity: 0;
@@ -37,8 +55,8 @@
 </head>
 
 <body class="bg-gray-50 text-gray-900 font-sans">
-    <header class="bg-white shadow-md py-6 px-4 text-center">
-        <h1 class="text-3xl font-bold">История графического дизайна</h1>
+    <header class="header-background bg-black bg-opacity-80 shadow-md py-6 px-4 text-center">
+        <h1 class="text-3xl font-bold text-white drop-shadow-lg">История графического дизайна</h1>
     </header>
 
     <main class="max-w-6xl mx-auto py-10 px-4 animate-fade-in-up">
