--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>История графического дизайна</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
+        @font-face {
+            font-family: 'Satyr SP';
+            src: url('fonts/SatyrSP.otf') format('opentype');
+            /* Убедись в правильном пути к файлу */
+            font-weight: normal;
+            font-style: normal;
+        }
+
+        .font-satyr {
+            font-family: 'Satyr SP', serif;
+        }
+    </style>
+    <style>
         .header-background {
             background-image: url('header.jpeg');
             /* путь к изображению */
@@ -19,7 +32,7 @@
 
         @media (min-width: 768px) {
             .header-background {
-                height: 300px;
+                height: 200px;
                 /* Увеличиваем на больших экранах */
             }
         }
@@ -55,8 +68,10 @@
 </head>
 
 <body class="bg-gray-50 text-gray-900 font-sans">
-    <header class="header-background bg-black bg-opacity-80 shadow-md py-6 px-4 text-center">
-        <h1 class="text-3xl font-bold text-white drop-shadow-lg">История графического дизайна</h1>
+    <header
+        class="header-background bg-black h-72 flex items-center justify-center bg-opacity-80 shadow-md px-4 text-center">
+        <h1 class="text-6xl font-bold font-satyr text-white drop-shadow-lg">История
+            графического дизайна</h1>
     </header>
 
     <main class="max-w-6xl mx-auto py-10 px-4 animate-fade-in-up">
