add some content

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             transform: translateX(-50%);
             width: 4px;
             height: 100%;
-            background-color: hwb(220 58% 18%);
+            background-color: #a6311f;
         }
 
         .timeline-year {
@@ -88,56 +88,111 @@
 
     <main class="max-w-6xl mx-auto py-10 px-4 animate-fade-in-up">
         <section class="text-center mb-10">
-            <h2 class="text-4xl font-bold mb-2">Таймлайн</h2>
+            <h2 class="text-4xl font-bold mb-2" style="color: #731a0d;">Таймлайн</h2>
             <p class="text-gray-600 text-lg">Ключевые события и стили, повлиявшие на визуальную культуру</p>
         </section>
 
         <div class="relative">
             <div class="timeline absolute left-1/2 top-0 bottom-0"></div>
 
-            <!-- Зарубка года -->
-            <div class="timeline-year" style="top: 100px;">1440</div>
-
             <!-- Событие с картинкой справа -->
             <div class="mb-16 flex flex-col md:flex-row justify-between items-center w-full group relative">
                 <!-- Левая часть: карточка -->
                 <div onclick="toggleCard(this)"
                     class="md:w-5/12 p-6 bg-white rounded-xl shadow-md cursor-pointer transition-transform hover:-translate-y-2">
-                    <h3 class="text-xl font-semibold">Появление печатного станка (около 1440)</h3>
-                    <p class="mt-2 text-gray-700">Изобретение печатного станка стало основой для массового производства
-                        шрифтов и книгопечатания.</p>
+                    <h3 class="text-2xl font-semibold font-satyr" style="color: #731a0d;">Основные понятия и отрасли
+                        графического
+                        дизайна</h3>
+                    <p class="mt-2 text-gray-700">Художественный язык и приемы смыслообразования в графическом дизайне
+                    </p>
                     <div class="mt-3 text-sm text-gray-600 hidden">
-                        <p class="mt-1">Иоганн Гутенберг в 1440 году изобрёл печатный станок, что революционизировало
-                            распространение информации и развитие графического дизайна.</p>
+                        <p class="mt-1">Графический дизайн как профессиональная область возник в XIX веке, но его корни
+                            уходят в более глубокое прошлое. Исторически графический дизайн был тесно связан с развитием
+                            письменности и печатного дела, а также с потребностью в визуальной коммуникации через
+                            различные медиа.
+
+                            Основные отрасли графического дизайна на протяжении истории прошли через несколько ключевых
+                            этапов:
+
+                            Типографика и книги: В эпоху книгопечатания (начало XV века) разработка шрифтов и
+                            художественное оформление текстов стали важными аспектами графического дизайна. Шрифты,
+                            такие как Гутенбергова антиква или грекизированные шрифты, начали формировать графическую
+                            культуру. С развитием печатных изданий в XVI-XVII веках важным стало оформление книг, что
+                            привело к появлению первых книжных иллюстраций и декоративных элементов.
+
+                            Реклама и плакаты: С развитием индустриализации в XVIII-XIX веках возникла потребность в
+                            рекламе, что стало одной из отраслей графического дизайна. В это время начали появляться
+                            плакаты, которые служили не только средством рекламы, но и формой массовой коммуникации. В
+                            конце XIX века с развитием печатных технологий возникла первая школа плакатного дизайна,
+                            ставшая важной частью визуальной культуры.
+
+                            Брендинг и айдентика: В XX веке, с развитием массового производства и торговли, стал важным
+                            процесс создания визуальных идентичностей для компаний. Это привело к становлению брендинга
+                            как отдельной отрасли. Первый значимый шаг был сделан с разработкой логотипов для крупных
+                            корпораций, таких как Coca-Cola и Ford в начале XX века.
+
+                            Моушн-дизайн: Хотя анимация и видеографика начали развиваться еще в 1920-30-е годы с
+                            появлением кино, развитие моушн-дизайна как отдельной области пришло уже в конце XX века, с
+                            развитием цифровых технологий и интернет-платформ.</p>
                     </div>
                 </div>
-
+                <!-- Зарубка года -->
+                <div class="timeline-year" style="top: 100px;">какой-то год</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
-                    <img src="files/gutenberg.jpg" alt="Печатный станок" class="rounded-xl shadow-md w-full" />
+                    <img src="files/gutenberg.jpg" alt="Summary" class="rounded-xl shadow-md w-full" />
                 </div>
             </div>
-
-            <!-- Зарубка года -->
-            <div class="timeline-year" style="top: 250px;">1440-1550</div>
 
             <!-- Событие с картинкой справа -->
             <div class="mb-16 flex flex-col md:flex-row-reverse justify-between items-center w-full group relative">
                 <!-- Левая часть: карточка -->
                 <div onclick="toggleCard(this)"
                     class="md:w-5/12 p-6 bg-white rounded-xl shadow-md cursor-pointer transition-transform hover:-translate-y-2">
-                    <h3 class="text-xl font-semibold">Появление печатного станка (около 1440)</h3>
-                    <p class="mt-2 text-gray-700">Изобретение печатного станка стало основой для массового производства
-                        шрифтов и книгопечатания.</p>
+                    <h3 class="text-2xl font-semibold font-satyr" style="color: #731a0d;">Книга в Древнем Египте</h3>
+                    <p class="mt-2 text-gray-700">В Древнем Египте книги представляли собой свитки из папируса</p>
                     <div class="mt-3 text-sm text-gray-600 hidden">
-                        <p class="mt-1">Иоганн Гутенберг в 1440 году изобрёл печатный станок, что революционизировало
-                            распространение информации и развитие графического дизайна.</p>
+                        <p class="mt-1">Эти свитки использовались для записи текстов на религиозные, научные и
+                            административные темы. Эти
+                            свитки часто украшались красочными иллюстрациями и иероглифами, а также были важным
+                            инструментом для передачи знаний и культуры. Египтяне разработали уникальные формы записи и
+                            оформления, которые оказали влияние на всю дальнейшую историю письменности и книгопечатания.
+                            Роль книги в египетской культуре была неоценима, она служила средством сохранения знаний и
+                            связующим звеном между поколениями.</p>
                     </div>
                 </div>
-
+                <!-- Зарубка года -->
+                <div class="timeline-year" style="top: 100px;">какой-то год</div>
                 <!-- Правая часть: картинка напротив линии -->
                 <div class="md:w-5/12 mt-6 md:mt-0">
-                    <img src="printing-press.jpg" alt="Печатный станок" class="rounded-xl shadow-md w-full" />
+                    <div class="overflow-hidden h-64 rounded-xl shadow-md">
+                        <img src="files/d444f-dancing.webp" alt="Egypt" class="w-full h-full object-cover" />
+                    </div>
+                </div>
+            </div>
+            <!-- Событие с картинкой справа -->
+            <div class="mb-16 flex flex-col md:flex-row justify-between items-center w-full group relative">
+                <!-- Левая часть: карточка -->
+                <div onclick="toggleCard(this)"
+                    class="md:w-5/12 p-6 bg-white rounded-xl shadow-md cursor-pointer transition-transform hover:-translate-y-2">
+                    <h3 class="text-2xl font-semibold font-satyr" style="color: #731a0d;">Античная книга
+                    </h3>
+                    <p class="mt-2 text-gray-700">Античные книги, такие как свитки из пергамента или папируса, были
+                        основным средством записи и передачи знаний в Древней Греции и Риме.
+                    </p>
+                    <div class="mt-3 text-sm text-gray-600 hidden">
+                        <p class="mt-1">Эти книги, часто оформленные рукописным текстом и иллюстрациями, служили для
+                            сохранения литературных, философских и научных произведений. Свитки, раскручивающиеся для
+                            чтения, постепенно уступили место более удобным кодексам (переплетённым книгам) в первые
+                            века нашей эры. Античная книга сыграла ключевую роль в сохранении культурного наследия и
+                            стала важным этапом в развитии письменности и книги как средства массовой коммуникации.</p>
+                    </div>
+                </div>
+                <!-- Зарубка года -->
+                <div class="timeline-year" style="top: 100px;">какой-то год</div>
+                <!-- Правая часть: картинка напротив линии -->
+                <div class="md:w-5/12 mt-6 md:mt-0">
+                    <img src="files/3ancient.jpg" alt="Summary" class="rounded-xl shadow-md w-full" />
                 </div>
             </div>
 
