--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
         @media (max-width: 768px) {
             .timeline-year {
                 position: relative;
-                left: 0;
+                left: 50%;
                 /* Убираем отступ слева на мобильных устройствах */
-                top: 10px;
+                top: 0;
                 /* Поднимаем зарубку немного вверх */
                 font-size: 1.2rem;
                 /* Уменьшаем размер шрифта на мобильных устройствах */
